# SiWiR1-Projects

./: README.md
Ex01/: Makefile  Readme.txt  assignment1 data.xlsx  likwidScript  optimized.cpp
Ex01/Mics/: Matrix_opt.cp  matrix_mult.cp
Ex01/Scientific-Computing/: README.md  multi.cpp
Ex02/: EllipticSolver.cpp  EllipticSolver_V3.0.cpp  EllipticSolver_v1.0.cpp
Ex02/Final/: Makefile  readme.txt
Ex02/mics/: README.md  Report_Assignment2.pages  Solution_serial.txt  latex code of matrix.txt  redBlackHelper.cpp  redBlackHelper_V1.cpp  reportSiwir2.numbers  test.c  u_Val.txt  u_boundary.txt
Ex03/Ex03/: Makefile  cg  cg.cpp  readme.txt  solution.txt
Ex03/MPI_examples/: MPI_HelloWorld.cpp  MPI_Parameters.cpp  MPI_Topology.cpp  MPI_Vector.cpp  a.out
Ex03/git/Conjugate-Gradient--2D-Poisson-with-MPI-Parallelerization/: README.md  a.out  cg.cpp  cg14.cpp  cg15.cpp  cg16.cpp  cgfinal.cpp  cgmmpiv11.cpp  cgmmpiv11_Raju.cpp  cgmmpiv12.cpp  cgmmpiv3.cpp  cgmmpiv4.cpp  cgmmpiv5.cpp  cgmmpiv6.cpp  cgmmpiv7.cpp  cgmmpiv8.cpp  cgmmpiv9.cpp  cgmpi.cpp
Ex04/Ex04/Assignment4/: Explicit.cpp  Explicit.hpp  Implicit.cpp  Implicit.hpp  Makefile  ParabolicSolver.cpp  ParabolicSolver.h  cmake_install.cmake  global.cpp  global.hpp  heat  (+3 more)
Ex04/Ex04/Assignment4.xcodeproj/: project.pbxproj
Ex04/Ex04/Assignment4/testCmake/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  heat  mpi_Cart_Create.cpp
Ex04/hello/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  hello.cpp
Ex04/vtk/: README.txt
Ex04/vtkWriterHelper/: VTKWriter.cc
(+18 files in other folders)
